# TestPlatform

./: .gitignore  README.md  check_mysql.py  debug_config.py  debug_frontend.py  fix_mysql.py  fix_mysql2.py  test_ai_direct.py  test_api.py  test_backend_ai.py  个人简历（260126）.md
.todo/: CHECKLIST.md  IMPLEMENT.md  Reconstruction Implementation.md  SPEC.md  TASKS.md
TestPlatform-backend/: .gitignore  pom.xml
ai-service/: .env.example  .gitignore  README.md  REFACTOR_SUMMARY.md  config.yaml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
ai-service/app/: config.py  main.py
ai-service/assets/: README.md
ai-service/chroma_data/: chroma.sqlite3  fallback_docs.json
ai-service/evals/: __init__.py  init_langsmith.py  metrics.py  run_agent_eval.py  run_rag_eval.py  setup_eval.py  (+2 more)
cli/: README.md
cli/solution/files/: README.md  Skill.md  pyproject.toml
cli/solution/files/src/testplatform/: __init__.py  config.py  main.py
cli/solution/files/src/testplatform/commands/: __init__.py  api.py  auth.py  case.py  common_param.py  domain.py  env.py  module.py  project.py  user.py
cli/solution/files/src/testplatform/utils/: __init__.py  http_client.py
platform-backend/: .gitignore  README.md  pom.xml
platform-frontend/: .editorconfig  .env.development  .env.production  .eslintignore  .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
tmp_debug/: README.md  debug_ai.py  debug_frontend_ai.py  debug_llm.py  test_ai_debug.py  test_api2.py  test_api3.py  test_api4.py  test_api5.py  test_api6.py
(+481 files in other folders)
